fixed magnific popup gallery clipping bug

--- a/assets/magnific-popup/magnific-popup.css
+++ b/assets/magnific-popup/magnific-popup.css
@@ -129,13 +129,15 @@ button::-moz-focus-inner {
   text-decoration: none;
   text-align: center;
   opacity: 0.65;
+  filter: alpha(opacity=65);
   padding: 0 0 18px 10px;
   color: white;
   font-style: normal;
   font-size: 28px;
   font-family: Arial, Baskerville, monospace; }
   .mfp-close:hover, .mfp-close:focus {
-    opacity: 1; }
+    opacity: 1;
+    filter: alpha(opacity=100); }
   .mfp-close:active {
     top: 1px; }
 
@@ -160,6 +162,7 @@ button::-moz-focus-inner {
 .mfp-arrow {
   position: absolute;
   opacity: 0.65;
+  filter: alpha(opacity=65);
   margin: 0;
   top: 50%;
   margin-top: -55px;
@@ -170,7 +173,8 @@ button::-moz-focus-inner {
   .mfp-arrow:active {
     margin-top: -54px; }
   .mfp-arrow:hover, .mfp-arrow:focus {
-    opacity: 1; }
+    opacity: 1;
+    filter: alpha(opacity=100); }
   .mfp-arrow:before, .mfp-arrow:after, .mfp-arrow .mfp-b, .mfp-arrow .mfp-a {
     content: '';
     display: block;
@@ -188,7 +192,8 @@ button::-moz-focus-inner {
     top: 8px; }
   .mfp-arrow:before, .mfp-arrow .mfp-b {
     border-top-width: 21px;
-    border-bottom-width: 21px; }
+    border-bottom-width: 21px;
+    opacity: 0.7; }
 
 .mfp-arrow-left {
   left: 0; }
@@ -232,6 +237,7 @@ button::-moz-focus-inner {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
     background: black; }
 
+/* Main image in popup */
 img.mfp-img {
   width: auto;
   max-width: 100%;
@@ -244,6 +250,7 @@ img.mfp-img {
   padding: 40px 0 40px;
   margin: 0 auto; }
 
+/* The shadow behind the image */
 .mfp-figure {
   line-height: 0; }
   .mfp-figure:after {
@@ -264,6 +271,8 @@ img.mfp-img {
     display: block;
     font-size: 12px;
     line-height: 14px; }
+  .mfp-figure figure {
+    margin: 0; }
 
 .mfp-bottom-bar {
   margin-top: -36px;
@@ -287,19 +296,20 @@ img.mfp-img {
   cursor: pointer; }
 
 @media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
+  /**
+       * Remove all paddings around the image on small screen
+       */
   .mfp-img-mobile .mfp-image-holder {
     padding-left: 0;
     padding-right: 0; }
   .mfp-img-mobile img.mfp-img {
     padding: 0; }
-  .mfp-img-mobile .mfp-figure {
- }
-    .mfp-img-mobile .mfp-figure:after {
-      top: 0;
-      bottom: 0; }
-    .mfp-img-mobile .mfp-figure small {
-      display: inline;
-      margin-left: 5px; }
+  .mfp-img-mobile .mfp-figure:after {
+    top: 0;
+    bottom: 0; }
+  .mfp-img-mobile .mfp-figure small {
+    display: inline;
+    margin-left: 5px; }
   .mfp-img-mobile .mfp-bottom-bar {
     background: rgba(0, 0, 0, 0.6);
     bottom: 0;
